<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetbot_control</name>
  <version>1.0.0</version>
  <description>
    Motion Control JetBot AI Waveshare — KBBC dan KBBC+PID
    Referensi: Demirbas dan Kalyoncu (2017)
    TA: Implementasi Motion Control berbasis ROS 2
  </description>

  <maintainer email="mahasiswa@email.com">Sandi</maintainer>
  <license>MIT</license>

  <!-- ROS 2 build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
